# StandAloneCSharpParser

./: AstVisitor.cs  CMakeLists.txt  Program.cs  README.md  StandAloneCSharpParser.csproj  Test.cs
Migrations/: 20210920184054_InitialCreate.Designer.cs  20210920184054_InitialCreate.cs  20210920213855_update1.Designer.cs  20210920213855_update1.cs  20210920214004_update2.Designer.cs  20210920214004_update2.cs  20211003210414_classes_and_namespaces.Designer.cs  20211003210414_classes_and_namespaces.cs  20211004171959_foreignKey.Designer.cs  20211004171959_foreignKey.cs  20211004174256_foreignKeyAlternative2.Designer.cs  20211004174256_foreignKeyAlternative2.cs  20211004190906_foreignKeyAlternative3.Designer.cs  20211004190906_foreignKeyAlternative3.cs  20211009104934_columnRename.Designer.cs  20211009104934_columnRename.cs  20211021110413_interfcae_delegate_constructor_destructor.Designer.cs  20211021110413_interfcae_delegate_constructor_destructor.cs  20211031183410_EventsAdded.Designer.cs  20211031183410_EventsAdded.cs  javadbcontextModelSnapshot.cs
cmake-submodules/: FindCSharp.cmake
model/: CsharpAstNode.cs  CsharpClass.cs  CsharpDbContext.cs  CsharpEntity.cs  CsharpEnum.cs  CsharpEnumMember.cs  CsharpMethod.cs  CsharpNamespace.cs  CsharpVariable.cs
modell/: csharpastnode.cs  csharpdbcontext.cs  csharpentity.cs
